--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class = "choice" id               = "scissors">
     <img src   = "images/Scissors.png" alt = "">
     </div>
-    <p      id  = "action-message">This Game  Made  By <a href="https://cancalkan.github.io/" target="_blank" style="color:#fff"> Can Calkan</a></p>
+    <p      id  = "action-message">This Game  Made  By <a href="https://cancalkan.github.io/" target="_blank"   rel="noopener noreferrer" style="color:#fff"> Can Calkan</a></p>
     <script src = "app.js" charset = "uft-8"></script>
 </div>
 <footer>
