--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class = "choice" id               = "scissors">
     <img src   = "images/Scissors.png" alt = "">
     </div>
-    <p      id  = "action-message">This Game  Made  By <a href="https://cancalkan.github.io/" target="_blank"   rel="noopener noreferrer" style="color:#fff"> Can Calkan</a></p>
+    <p      id  = "action-message">This Game  Made  By <a href="https://cancalkan.github.io/" target="_blank"  rel="noopener noreferrer" style="color:#fff"> Can Calkan</a></p>
     <script src = "app.js" charset = "uft-8"></script>
 </div>
 <footer>
@@ -39,6 +39,7 @@
             <li> <a href="https://www.youtube.com/channel/UCASbHHytLS6qNfEG1JoBQOA?" target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-youtube"></i></a>
             <li> <a href="https://github.com/cancalkan"  target="_blank " rel="noopener noreferrer" class="btn btn-default"><i class="fa fa-github"></i></a></li>
             <li> <a href="mailto:cancalkaniletisim@gmail.com"  target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-envelope"></i></a> </li>
+            <li> <a href="https://cancalkan.computer/"  target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-rss"></i></a> </li>
         </ul>
 
     </div>
