--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-       <h1> Rock Paper Scissors </h1>
+       <h1> Rock Paper Scissors</h1>
    </header>
    <div  class = "score-board">
    <div  id    = "user-label" class             = "badge"> You</div>
@@ -17,7 +17,7 @@
    <span id    = "user-score">0</span>:<span id = "pc-score">0</span>
    </div>
 <div class = "result">
-    <p>Choose Your Move </p>
+    <p>Paper covers rock.You win</p>
 </div>
 <div class = "choices">
 <div class = "choice" id           = "rock">
