--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset = "UTF-8">
     <meta name    = "viewport" content = "width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors Game by Can Calkan </title>
+    <title>Rock Paper Scissors Game by Kaan Can Calkan </title>
     <link rel = "stylesheet" href = "styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -29,17 +29,17 @@
     <div class = "choice" id               = "scissors">
     <img src   = "images/Scissors.png" alt = "">
     </div>
-    <p      id  = "action-message">This Game  Made  By <a href="https://cancalkan.github.io/" target="_blank"  rel="noopener noreferrer" style="color:#fff"> Can Calkan</a></p>
+    <p      id  = "action-message">This Game  Made  By <a href="https://kaancancalkan.github.io/" target="_blank"  rel="noopener noreferrer" style="color:#fff"> Kaan Can Calkan</a></p>
     <script src = "app.js" charset = "uft-8"></script>
 </div>
 <footer>
     <div class="social-menu">
         <ul>
-            <li> <a href="https://www.linkedin.com/in/cancalkan/"  target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-linkedin"></i></a> </li>
-            <li> <a href="https://www.youtube.com/channel/UCASbHHytLS6qNfEG1JoBQOA?" target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-youtube"></i></a>
-            <li> <a href="https://github.com/cancalkan"  target="_blank " rel="noopener noreferrer" class="btn btn-default"><i class="fa fa-github"></i></a></li>
+            <li> <a href="https://www.linkedin.com/in/kaancancalkan/"  target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-linkedin"></i></a> </li>
+            <!-- <li> <a href="https://www.youtube.com/channel/UCASbHHytLS6qNfEG1JoBQOA?" target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-youtube"></i></a> -->
+            <li> <a href="https://github.com/kaancancalkan"  target="_blank " rel="noopener noreferrer" class="btn btn-default"><i class="fa fa-github"></i></a></li>
             <li> <a href="mailto:cancalkaniletisim@gmail.com"  target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-envelope"></i></a> </li>
-            <li> <a href="https://cancalkan.computer/"  target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-rss"></i></a> </li>
+            <!-- <li> <a href="https://cancalkan.computer/"  target="_blank" rel="noopener noreferrer"class="btn btn-default"><i class="fa fa-rss"></i></a> </li> -->
         </ul>
 
     </div>
